package br.unitins.topicos1.ecommerce.dto;

public record ItemPedidoDTO(

    Integer quantidade,
    Double preco,
    Long idProduto
) {
    
}
